Changes for communicating with efl port.
Signed-off-by: suyambu.rm <suyambu.rm@samsung.com>

--- a/mojo/public/tools/bindings/mojom.gni
+++ b/mojo/public/tools/bindings/mojom.gni
@@ -12,7 +12,7 @@ import("//build/config/jumbo.gni")
 import("//build/config/chrome_build.gni")
 import("//build/config/nacl/config.gni")
 import("//components/nacl/features.gni")
-
+import("//build/config/features.gni")
 declare_args() {
   # Indicates whether typemapping should be supported in this build
   # configuration. This may be disabled when building external projects which
@@ -39,9 +39,8 @@ declare_args() {
 # consequently also when building for NaCl toolchains.) For this reason we
 # check |target_os| explicitly, as it's consistent across all toolchains.
 enable_scrambled_message_ids =
-    is_mac || is_win || (is_linux && !is_chromeos) ||
+    is_mac || is_win || (is_linux && !is_chromeos && !enable_castanets) ||
     ((enable_nacl || is_nacl || is_nacl_nonsfi) && target_os != "chromeos")
-
 mojom_generator_root = "//mojo/public/tools/bindings"
 mojom_generator_script = "$mojom_generator_root/mojom_bindings_generator.py"
 mojom_generator_sources = [
