--- a/mojo/edk/system/BUILD.gn
+++ b/mojo/edk/system/BUILD.gn
@@ -112,7 +112,7 @@ component("system") {
 
   # Use target_os == "chromeos" instead of is_chromeos because we need to
   # build NaCl targets (i.e. IRT) for ChromeOS the same as the rest of ChromeOS.
-  if (is_android || target_os == "chromeos") {
+  if ((is_android || target_os == "chromeos") && !enable_castanets) {
     defines += [ "MOJO_EDK_LEGACY_PROTOCOL" ]
   }
 
