Apply zlib,brotli,wep (webp: only tiles) based compression before sending data.
Signed-off-by: suyambu.rm <suyambu.rm@samsung.com>

--- a/mojo/core/BUILD.gn
+++ b/mojo/core/BUILD.gn
@@ -157,6 +157,11 @@ template("core_impl_source_set") {
       deps += [
         "//base:base_static",
         "//mojo/public/cpp/platform:platform",
+        "//third_party/zlib/google:compression_utils",
+        "//third_party/brotli:dec",
+        "//third_party/brotli:enc",
+        "//third_party/libwebp:libwebp_dec",
+        "//third_party/libwebp:libwebp_enc",
       ]
     }
     if (is_android) {
