Apply zlib,webp based compression for sync data.
1. Default compression type is zlib.
2. Apply webp compression for tiles.
3. If the sync size is less than 200 bytes, do not apply
   compression.

--- a/mojo/core/BUILD.gn
+++ b/mojo/core/BUILD.gn
@@ -157,6 +157,9 @@ template("core_impl_source_set") {
       deps += [
         "//base:base_static",
         "//mojo/public/cpp/platform:platform",
+        "//third_party/libwebp:libwebp_dec",
+        "//third_party/libwebp:libwebp_enc",
+        "//third_party/zlib/google:compression_utils",
       ]
     }
     if (is_android) {
