--- a/net/features.gni
+++ b/net/features.gni
@@ -41,5 +41,6 @@ declare_args() {
 
   # Platforms where the cert verifier comparison trial is supported.
   # See https://crbug.com/649026.
-  trial_comparison_cert_verifier_supported = is_desktop_linux || is_mac
+  trial_comparison_cert_verifier_supported =
+      (is_desktop_linux || is_mac) && !enable_castanets
 }
