--- a/services/network/public/mojom/BUILD.gn
+++ b/services/network/public/mojom/BUILD.gn
@@ -149,4 +149,8 @@ mojom("mojom") {
     enabled_features += [ "is_trial_comparison_cert_verifier_supported" ]
     sources += [ "trial_comparison_cert_verifier.mojom" ]
   }
+
+  if (enable_castanets) {
+    enabled_features += [ "is_castanets" ]
+  }
 }
